--- a/service_evaluation/requirements.txt
+++ b/service_evaluation/requirements.txt
@@ -3,8 +3,10 @@ certifi==2018.8.24
 chardet==3.0.4
 defusedxml==0.5.0
 Django==2.1.2
+django-cors-headers==2.4.0
 django-extensions==2.1.3
 django-tuauth==0.1.2
+djangorestframework==3.8.2
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
@@ -23,4 +25,3 @@ social-auth-core==1.7.0
 typed-ast==1.1.0
 urllib3==1.23
 wrapt==1.10.11
-uwsgi
