--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     - env/.env.production
     networks:
     - internal
+    - db_service
     labels:
     - traefik.enable=false
     restart: always
@@ -55,6 +56,8 @@ services:
 networks:
   internal:
     external: false
+  db_service:
+    external: true
   proxy:
     external: true
 
